@@ -907,7 +907,6 @@
   <block id="3a41597d5116718fb24622669197f3e8" category="paragraph">Cliquez sur *sauvegarde et restauration* &gt; *machines virtuelles* pour afficher tous les datastores et toutes les machines virtuelles qui peuvent être protégés à l'aide du plug-in SnapCenter enregistré pour VMware vSphere.</block>
   <block id="ee0db59fec59c2b3e6c6583a61bf12b6" category="doc">Surveillance de l'état des tâches de sauvegarde et de restauration</block>
   <block id="10ad842a6a3246a44700dd2f0005c89c" category="section-title">Utilisez le moniteur des tâches pour afficher l'état des tâches de sauvegarde et de restauration</block>
-  <block id="8fa9fc7dcc8c23904d4a616698a7a223" category="paragraph">Vous pouvez afficher la liste de toutes les opérations de sauvegarde et de restauration ainsi que leur état actuel dans l'onglet *surveillance des travaux*. Il s'agit notamment des opérations de vos systèmes Cloud Volumes ONTAP, ONTAP sur site, applications, machines virtuelles et Kubernetes. Chaque opération, ou tâche, a un ID et un état uniques. Le statut peut être :</block>
   <block id="505a83f220c02df2f85c3810cd9ceb38" category="list-text">Réussite</block>
   <block id="c9413dd7682a45da9ecc9efa8cea47d7" category="list-text">En cours</block>
   <block id="7b2f31b90fe1c2cc33a52233c1925df3" category="list-text">En file d'attente</block>
@@ -3570,11 +3569,9 @@
   <block id="5463242c7cc34f92b5dbbf1ab6d87188" category="paragraph">Dans le passé, lorsque vous avez restauré un dossier, seuls les fichiers de ce dossier ont été restaurés : aucun sous-dossier, ni fichier dans des sous-dossiers, n'a été restauré. Maintenant, si vous utilisez ONTAP 9.13.0 ou une version ultérieure, tous les sous-dossiers et fichiers du dossier sélectionné sont restaurés. Cela permet d'économiser beaucoup de temps et d'argent dans les cas où vous avez plusieurs dossiers imbriqués dans un dossier de premier niveau.</block>
   <block id="bbe776d643f3b0568f3c2fa216a50124" category="section-title">Possibilité de sauvegarder des données à partir de systèmes Cloud Volumes ONTAP dans des sites invisibles</block>
   <block id="aef1b3252b7a5b85dab7066cccc19b52" category="paragraph">Vous pouvez désormais sauvegarder les données à partir de systèmes Cloud Volumes ONTAP installés dans les régions commerciales AWS et Azure vers Amazon S3 ou Azure Blob. Pour ce faire, vous devez installer le connecteur sur un hôte Linux de la région commerciale et déployer le système Cloud Volumes ONTAP là aussi. Voir <block ref="31e49e13e812c331f506a2a8e6b7ad22" category="inline-link-macro-rx"></block> et <block ref="ab5c78f08c8780b598ee1d4de19230ab" category="inline-link-macro-rx"></block>.</block>
-  <block id="463ed6b78b2c95e39ecc10ee3195e921" category="section-title">Job Monitor offre un filtrage avancé pour rechercher des tâches de sauvegarde ou de restauration spécifiques</block>
   <block id="1cdf820a77c583c660d65df7b1ca03b8" category="inline-link">Voir comment utiliser les filtres avancés</block>
   <block id="aa3492539222da5bc85fd5614f489f71" category="paragraph">La page surveillance des tâches a ajouté un filtrage avancé pour vous permettre de rechercher des tâches de sauvegarde et de restauration par temps, workload (volumes, applications, machines virtuelles ou Kubernetes), Type de tâche, état, environnement de travail et machine virtuelle de stockage. Vous pouvez également entrer du texte libre pour rechercher n'importe quelle ressource, par exemple, "application_3". <block ref="f726054cf0d935cd51c2a5edb3b3fd0c" category="inline-link-rx"></block>.</block>
   <block id="1625899745083f00e310fe6a84e9582c" category="list-text">Les autorisations S3 suivantes doivent faire partie du rôle IAM qui fournit au connecteur des autorisations :</block>
-  <block id="ec119ac8f6ca5b011d4a2ba9323dbca5" category="admonition">Les tâches lancées par le système, telles que les opérations de sauvegarde en cours, ne sont pas reflétées dans l'onglet *Job Monitoring* pour le moment -- seuls les travaux initiés par l'utilisateur sont affichés.</block>
   <block id="d90665b682298c55adb9c3f6a9ceb3f0" category="paragraph">Cette capture d'écran affiche les en-têtes de colonne/champ par défaut. Vous pouvez cliquer sur <block ref="67e31c53d0f38fc4da85c525a5be7511" category="inline-image-macro-rx" type="image"></block> Quatre colonnes supplémentaires pour « Environnement de travail », « SVM », « Nom d'utilisateur » et « charges de travail ».</block>
   <block id="9d5572457fea4567bbd4373a983f3216" category="section-title">Recherche et filtrage de la liste des travaux</block>
   <block id="c892f9f2802395ba3a650b944f02ddbc" category="paragraph">Par défaut, la page surveillance des travaux affiche les travaux des 24 dernières heures. Vous pouvez trier les résultats en cliquant sur chaque en-tête de colonne pour les trier par état, heure de début, Nom de la ressource, etc.</block>
@@ -3591,4 +3588,9 @@
   <block id="e429a3dcdf9ca5d36834b72490aae784" category="admonition">La priorité élevée n'est pas prise en charge lors de la restauration de données à partir du stockage d'archives Azure vers les systèmes StorageGRID.</block>
   <block id="5a583661a8908e9d0eb4e2adb7e14660" category="paragraph">Si vous utilisez ONTAP 9.13.0 ou une version ultérieure, vous pouvez restaurer un dossier avec tous les fichiers et sous-dossiers qu'il contient. Lorsque vous utilisez une version de ONTAP antérieure à 9.13.0, seuls les fichiers de ce dossier sont restaurés - aucun sous-dossier, ni fichier dans des sous-dossiers, ne sont restaurés.</block>
   <block id="9dc68f929a10fb4c3bc9901cb0ad551c" category="list-text">La priorité de restauration élevée n'est pas prise en charge lors de la restauration de données à partir du stockage d'archives Azure vers les systèmes StorageGRID.</block>
+  <block id="1442489a4cf0ea56df2e53ec47c70ec8" category="section-title">Plusieurs améliorations apportées au moniteur de tâches</block>
+  <block id="bf2bb33000b51334f72c2e394ff56247" category="list-text">Les opérations de sauvegarde et de restauration initiées par l'utilisateur à partir de l'interface utilisateur et de l'API de Cloud Backup, ainsi que les tâches initiées par le système, telles que les opérations de sauvegarde en continu, sont désormais disponibles dans l'onglet *contrôle des tâches* pour les systèmes Cloud Volumes ONTAP exécutant ONTAP 9.13.0 ou version ultérieure. Les versions antérieures des systèmes Cloud Volumes ONTAP et les systèmes ONTAP sur site n'affichent actuellement que les tâches initiées par l'utilisateur.</block>
+  <block id="da2d24e019fdbb554fb9260491bdb31f" category="paragraph">Vous pouvez afficher la liste de toutes les opérations de sauvegarde et de restauration ainsi que leur état actuel dans l'onglet *surveillance des travaux*. Il s'agit notamment des opérations de vos systèmes Cloud Volumes ONTAP, ONTAP sur site, applications, machines virtuelles et Kubernetes. Chaque opération, ou tâche, a un ID et un état uniques. Le statut peut être :</block>
+  <block id="51ed954daa0d2ac8e61b514ada10d020" category="paragraph">Les opérations de sauvegarde et de restauration initiées par l'utilisateur à partir de l'interface utilisateur et de l'API de Cloud Backup, ainsi que les tâches initiées par le système, telles que les opérations de sauvegarde en continu, sont disponibles dans l'onglet *contrôle des tâches* pour les systèmes Cloud Volumes ONTAP exécutant ONTAP 9.13.0 ou version ultérieure.</block>
+  <block id="ef3fa14a7fd05f8163ad506cf72a0464" category="admonition">Lors de l'exécution d'une version antérieure de ONTAP sur des systèmes Cloud Volumes ONTAP ou sur des systèmes ONTAP sur site, seules les tâches initiées par l'utilisateur sont affichées à l'heure actuelle.</block>
 </blocks>
